// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataList Cell 1`] = `
<div
  className="pf-c-data-list__cell data-list-custom"
  id="primary-item"
>
  Primary Id
</div>
`;

exports[`DataList Cell default 1`] = `
<div
  className="pf-c-data-list__cell"
>
  Secondary
</div>
`;

exports[`DataList DataListAction button 1`] = `
<Button
  aria-label={null}
  className=""
  component="button"
  id="delete-item-1"
  isActive={false}
  isBlock={false}
  isDisabled={false}
  isFocus={false}
  isHover={false}
  type="button"
  variant="primary"
>
  Delete
</Button>
`;

exports[`DataList DataListAction dropdown 1`] = `
<div
  className="pf-c-data-list__action"
>
  <Dropdown
    className=""
    direction="down"
    dropdownItems={
      Array [
        <Item
          className=""
          component="button"
          href="#"
          isDisabled={false}
          isHovered={false}
          onClick={[MockFunction]}
        >
          action-1
        </Item>,
        <Item
          className=""
          component="button"
          href="#"
          isDisabled={false}
          isHovered={false}
          onClick={[MockFunction]}
        >
          action-2
        </Item>,
      ]
    }
    isOpen={false}
    isPlain={true}
    onSelect={[Function]}
    position="right"
    toggle={
      <Kebab
        aria-label="Actions"
        className=""
        id=""
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      />
    }
  />
</div>
`;

exports[`DataList Item 1`] = `
<li
  aria-labelledby="item-1"
  className="pf-c-data-list__item data-list-item-custom"
/>
`;

exports[`DataList Item default 1`] = `
<li
  aria-labelledby="item-1"
  className="pf-c-data-list__item"
/>
`;

exports[`DataList List 1`] = `
.pf-c-data-list.data-list-custom {
  display: block;
  color: #151515;
  list-style-type: disc;
  background-color: #ffffff;
  border-top: 1px solid #d2d2d2;
  border-bottom: 1px solid #d2d2d2;
}

<ul
  aria-label="this is a simple list"
  className="pf-c-data-list data-list-custom"
  role="list"
/>
`;

exports[`DataList List default 1`] = `
.pf-c-data-list {
  display: block;
  color: #151515;
  list-style-type: disc;
  background-color: #ffffff;
  border-top: 1px solid #d2d2d2;
  border-bottom: 1px solid #d2d2d2;
}

<ul
  aria-label="this is a simple list"
  className="pf-c-data-list"
  role="list"
/>
`;
